--- a/supabase/config.toml
+++ b/supabase/config.toml
@@ -1,1 +1,7 @@
 project_id = "qyjoxzxtadduaqwtsbid"
+
+[functions.public-link-create]
+verify_jwt = false
+
+[functions.public-verify]
+verify_jwt = false
